security-group.tf
  resource "aws_security_group" "eks_cluster_sg" {
    name        = "eks-cluster-sg"
    description = "Cluster communication with worker nodes"
    vpc_id      = aws_vpc.eks_vpc.id

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "eks-cluster-sg"
    }
  }

  resource "aws_security_group_rule" "cluster_ingress_workstation_https" {
    cidr_blocks       = ["0.0.0.0/0"]
    description       = "Allow workstation to communicate with the cluster API Server"
    from_port         = 443
    protocol          = "tcp"
    security_group_id = aws_security_group.eks_cluster_sg.id
    to_port           = 443
    type              = "ingress"
  }
